# python_scratchpad_old

./: README.md  binary_tree_inorder_traversal.py  break_chocolate.py  convert.py  course_schedule.py  eight_one.py  fifo-child.py  fifo-parent.py  gui1.py  gui2b.py  interleaving_string.py  is_this_a_triangle.py  more copy.py  more.py  one_five.py  one_one.py  one_three.py  one_two.py  persistent_bugger.py  pq_example.py  promise.py  redirect.py  regex_replace.py  remove_linked_list_elements.py  seven_one.py  square_every_digit.py  subset_sum.py  subset_sum_exact.py  test1.py  test2.py  test_end_slice.py  test_remote_debug.py  teststreams.py  validate_binary_search_tree.py  who_likes_it.py
cmd_pattern/: cli.py  demo.py
context_manager/: test_context_manager.py
dhcpd/: dhcpd.leases  path_manipulation.py  regex_demo.py  test_data.py
django-polls/: CMakeLists.txt  notes.md
django-polls/mysite/: db.sqlite3
django-polls/mysite/mysite/: settings.py
django-polls/mysite/polls/: admin.py  models.py  tests.py  views.py
django-polls/mysite/polls/migrations/: 0001_initial.py
lpthw/: ex14.py  ex15.py  ex26.py  ex29.py
merge_tree/: merge_tree.py
misc_notes/: generate_debug_playbooks.py  get_inet.py  pre-commit.py  print_status.py  test_flatten.py  test_ns.py  test_obj_to_xml.py  test_ps.py  test_re.py  test_return_lambda.py  test_sort.py  test_sudo.py  test_swap.py  test_templates.py
mock_service/: daemon.py  service_runner.py
test_django/: db.sqlite3
test_drives/: test-dmsetup-remove.py  test-fmap-ref.pl  test-get-fdisk-drives.py  test-get-system-metadata.py  (+2 more)
(+73 files in other folders)
